2008-05-15  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/connections.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/dialogs.py:
	* flumotion/admin/gtk/greeter.py:
	* flumotion/admin/gtk/main.py:
	* flumotion/configure/configure.py:
	* flumotion/ui/simplewizard.py:
	Refactoring connection handling.
	This avoids a bit of duplication, improves the APIs.
	Do some underscore->camelcase renaming.
	gtk/main.py is considerably shorter and easier to understand.
	Add a PACKAGE variable used by gettext.
	
2008-05-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/main.py:
	  Use changes to Command class to be able to stop parsing when
	  usage or help is printed.
	* flumotion/monitor/nagios/util.py:
	  override .debug() properly

2008-05-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/main.py:
	  Put all manager-needing checks under a new command
	  called manager.

2008-05-14  Johan Dahlin  <johan@flumotion.com>

	* data/glade/production-wizard.glade:
	* flumotion/ui/wizard.py:
	* flumotion/wizard/productionsteps.py:
	Make sure so that enter on a radio button on the production step
	page goes to the next page. Add an API to go to the next page.
	Refactor a production step to be simpler.

2008-05-12  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/Makefile.am:
	* flumotion/common/common.py:
	* flumotion/common/format.py:
	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/misc/httpserver/admin_gtk.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_common.py:
	* flumotion/test/test_common_format.py:
	Move formattting functions out of flumotion.common.format.
	Translate formatTime using ngettext.
	Update callsites to import from flumotion.common.
	Split tests out to test_common_format.
	Fixes #938

2008-05-12  Johan Dahlin  <johan@flumotion.com>

	* data/glade/ondemand-wizard.glade: